# liboperator

./: Cargo.toml  README.md
src/: data.rs  io.rs  lib.rs  memory.rs  prelude.rs  rw.rs  timing.rs
src/opt/: adagrad.rs  adagrad_new.rs  adam.rs  adam_new.rs  grad.rs  mod.rs  rmsprop.rs  rmsprop_old.rs  sgd.rs  sgd_new.rs  sgd_old.rs  shared_sgd.rs  shared_sgd_new.rs  stochastic.rs
