[package]
name = "operator"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "operator"
path = "src/lib.rs"

[dependencies]
rand = "*"
densearray = { path = "../libdensearray" }
sharedmem = { path = "../libsharedmem" }
rng = { path = "../librng" }
typemap = { path = "../rust-typemap" }
